netcfg (0.69) UNRELEASED; urgency=low

  * Christian Perrier
    - Remove trailing exclamation mark from netcfg/dhcp_success_note
    - Run debconf-updatepo and unfuzzy templates for removed exclamation mark
  * Joshua Kwan
    - Corrected reference to the pppconfig package. Closes:#253086
    - killall.sh: add grep -v grep

 -- Joshua Kwan <joshk@triplehelix.org>  Thu, 10 Jun 2004 21:51:33 -0700

netcfg (0.68) unstable; urgency=medium

  * Severity medium for the static configuration fix.
  * Joshua Kwan
    - When we get a hostname from DHCP, seed the domain name with whatever
      was received.
    - Rework is_hotpluggable_iface a tad.
    - Fix problem where broadcast address was being used twice.. only on
      some architectures, due to code with unspecified behavior.
    - Excise our dynamic prebaseconfig system and replace with a static one
      that copies all available files into /target.
    - For this, make sure we always start with a clean slate by removing
      those files at startup.
    - Move a bunch of static strings to the header file.
  * Updated translations:
    - Welsh (cy.po) by Dafydd Harries
    - German (de.po) by Alwin Meschede
    - Hebrew (he.po) by Lior Kaplan

 -- Joshua Kwan <joshk@triplehelix.org>  Fri, 28 May 2004 10:05:29 -0700

netcfg (0.67) unstable; urgency=high

  * The "we love bugfixes that make new bugs" release.
  * Per Olofsson
    - Fixed segfault in find_in_devnames when a card was missing a devnames
      entry.
  * Joshua Kwan
    - Add a NETCFG_VERSION thingy so it's easier to figure out who's using
      what.
    - Don't reset the hostname to 'debian' on a failed seed from DNS.
    - Write resolv.conf and nothing else before preliminary activation
      for static configuration. This fixes the overwriting of static-specific
      interface entries with the common (lo) entry.

 -- Joshua Kwan <joshk@triplehelix.org>  Mon, 24 May 2004 16:27:06 -0700

netcfg (0.66) unstable; urgency=low

  * Joshua Kwan